--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -1,27 +1,25 @@
+body {
+  background-color: #F1EFE7;
+}
+
+
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    padding: 10px 20px;
-}
-
-h1 {
-  display: flex;
-  width: 100%;
-  justify-content: flex-start;
-  align-content: flex-start;
+    padding: 10px 10px;
+    margin: 0px 5%;
 }
 
 .header-container {
-  padding: 10px 10%;
+  width: 1000px;
+  height: 100px;
 }
 
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
   cursor: pointer;
   text-decoration: none;
 }
@@ -32,26 +30,34 @@ nav ul li {
     margin-right: 20px;
 }
 
-.about-text {
-    background-color: skyblue;
+.about-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     border: 1px;
     padding: 20px;
-    width: 50%;
+    width: 1300px;
     height: 150px;
-    margin: 0 auto;
+    margin: 0px 5%;
 }
 
-.about-text p {
+.about-container p {
 font-size: 20px;
 }
 
-.profile-image {
+.profile {
   max-width: 20%;
   padding: 20px;
 }
 
+.profile-image {
+  width: 100%;
+  display: flex;
+}
+
 .subHeading {
     text-align: center;
+    font-size: 20px;
     border-bottom: 1px solid black;
     width: 300px;
     margin: 5px auto;
@@ -100,13 +106,18 @@ font-size: 20px;
   }
 
 #categoryGrid {
-    margin: 0px;
+    margin: 0px 5%;
     display: grid;
-    grid-template-rows: 300px 300px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 300px 300px 300px 300px 300px 300px ;
+    grid-template-columns: 1fr 1fr;
     grid-template-areas:
-    "project1 project2 project3 project4"
-    "project5 project6 project7 project8";
+    "project1 project1"
+    "project1 project1"
+    "project2 project3"
+    "project4 project5"
+    "project6 project7"
+    "project8 project8"
+    ;
   }
 
 .categoryGridArea {
@@ -120,9 +131,10 @@ font-size: 20px;
   }
 
 .heading {
+    background-color: rgba(0,0,0,0.7);
     padding: 15px;
     height: 25px;
-    color: black;
+    color: white;
     font-size: 18px;
     border-bottom: 5px solid grey;
   }
@@ -154,14 +166,17 @@ font-size: 20px;
 
 .contact {
     text-align: center;
-    border-bottom: 1px solid black;
-    width: 300px;
+    font-size: 20px;
+    border-bottom: 1px solid grey;
+    width: 200px;
     margin: 5px auto;
   }
 
-.info p {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
+.info {
+  display: flex;
+  margin-right: 10px;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 15px;
+}
+
