--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F1EFE7;
+  background-color: #F1EFE7; /* setting the background color*/
 }
 
 
@@ -16,7 +16,7 @@ header {
   height: 100px;
 }
 
-nav {
+nav { /* navigation bar*/
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -55,21 +55,21 @@ font-size: 20px;
   display: flex;
 }
 
-.subHeading {
+.subHeading { /* styling subheading*/
     text-align: center;
     font-size: 20px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid black; /* setting the border color*/
     width: 300px;
     margin: 5px auto;
   }
 
-/**.container {
+/*
+.container {    
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   justify-content: center;
   width: 100%;
   margin: auto;
-  overflow: auto;
 }
 
 
@@ -93,7 +93,6 @@ font-size: 20px;
   justify-content: center;
   width: 1100px;
   margin: auto;
-  overflow: auto;
 }
 
 .projects2 {
@@ -105,20 +104,19 @@ font-size: 20px;
   text-align: center;
   padding: 10px;
 }
-**/
+*/
 
-.container, .container2 {
+.container, .container2 { /* styling the containers*/
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   justify-content: center;
   align-items: center;
   width: 100%;
   margin: auto;
-  overflow: auto;
 }
 
-
-/**.project1, .projects2 {
+/*
+.project1, .projects2 {
   display: flex;
   flex-direction: column;
   width: 500px;
@@ -129,10 +127,10 @@ font-size: 20px;
   grid-column: span 1;
   grid-row: span 1;
 }
-**/
+*/
 
-.project1 {
-  grid-column: span 2;
+.project1 { /* making the column for the main project (larger in size than the others)*/
+  grid-column: span 2; /* lets the image take up 2 columns within the same row*/
   grid-row: span 1;
   display: flex;
   flex-direction: column;
@@ -141,7 +139,7 @@ font-size: 20px;
   padding: 10px;
 }
 
-.projects2 {
+.projects2 { /* column  for the placeholders*/
   grid-column: span 1;
   grid-row: span 1;
   display: flex;
@@ -166,7 +164,8 @@ font-size: 20px;
   text-align: center;
 }
 
-/**@media screen and (max-width: 1000px) {
+/*
+@media screen and (max-width: 1000px) {
   .container {
     text-align: center;
 }
@@ -176,8 +175,6 @@ font-size: 20px;
 }
   .container2 {
     grid-template-columns: 1fr 1fr;
-    width: auto;
-    margin: 0;
 }
   .projects2 {
   width: 100%;
@@ -194,7 +191,6 @@ font-size: 20px;
 }
   .container2 {
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
     width: auto;
     margin: 0;
 }
@@ -202,10 +198,9 @@ font-size: 20px;
   width: 100%;
 }
 }
-**/
+*/
 
-@media screen and (max-width: 1000px) {
-
+@media screen and (max-width: 1000px) {  /* viewing in different sizes*/
   header .about-container{
     display: block;
   }
@@ -220,12 +215,10 @@ font-size: 20px;
   }
 }
 
-
-
 #contact {
     text-align: center;
     font-size: 20px;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid grey; /* setting the border color*/
     width: 200px;
     margin: 5px auto;
   }
